# axum_temp

./: .env  .gitignore  Cargo.toml  config.toml
api/: Cargo.toml
api/src/: lib.rs  route.rs
api/src/greet/: greet.rs  mod.rs
config/: Cargo.toml
config/src/: cfg.rs  get_cfg.rs  lib.rs
repo/: Cargo.toml
repo/src/: db.rs  lib.rs
repo/src/common/: res.rs
repo/src/greet/: mod.rs
repo/src/greet/entities/: greeter.rs  mod.rs  prelude.rs
repo/src/greet/model/: greeter.rs
service/: Cargo.toml
service/src/greet/: greeter.rs
utils/: Cargo.toml
utils/src/: env.rs
